--- a/source/stylesheets/screen.css.scss
+++ b/source/stylesheets/screen.css.scss
@@ -2,6 +2,7 @@
 @import 'normalize';
 @import 'variables';
 @import 'icon-font';
+@import 'crowdskout-colors';
 
 /*
 Copyright 2008-2013 Concur Technologies, Inc.
@@ -55,6 +56,22 @@ html, body {
     $nav-subitem-bg;
 }
 
+::placeholder {
+  color: #000;
+}
+::-webkit-input-placeholder {
+  color: $nav-text;
+}
+::-moz-placeholder {
+  color: $nav-text;
+}
+:-ms-input-placeholder {
+  color: $nav-text;
+}
+:-moz-placeholder {
+  color: $nav-text;
+}
+
 .tocify-wrapper {
   transition: left 0.3s ease-in-out;
 
@@ -66,7 +83,7 @@ html, body {
   left: 0;
   bottom: 0;
   width: $nav-width;
-  background-color: $nav-bg;
+  background-color: $electricblue;
   font-size: 13px;
   font-weight: bold;
 
@@ -89,9 +106,9 @@ html, body {
     position: relative;
 
     input {
-      background: $nav-bg;
+      background: $electricblue;
       border-width: 0 0 1px 0;
-      border-color: $search-box-border-color;
+      border-color: $pacificblue;
       padding: 6px 0 6px 20px;
       box-sizing: border-box;
       margin: $nav-v-padding $nav-padding;
@@ -123,12 +140,12 @@ html, body {
     transition-property: height, margin;
     transition-duration: 180ms;
     transition-timing-function: ease-in-out;
+    background: $pacificblue;
+
     &.visible {
       height: 30%;
       margin-bottom: 1em;
     }
-
-    @include embossed-bg;
 
     li {
       margin: 1em $nav-padding;
@@ -173,7 +190,7 @@ html, body {
 
   // This is the currently selected ToC entry
   .tocify-focus {
-    box-shadow: 0px 1px 0px $nav-active-shadow;
+    box-shadow: 0px 1px 0px $nav-text;
     background-color: $nav-active-bg;
     color: $nav-active-text;
   }
@@ -182,7 +199,7 @@ html, body {
   // in the table of contents.
   .tocify-subheader {
     display: none; // tocify will override this when needed
-    background-color: $nav-subitem-bg;
+    background-color: $pacificblue;
     font-weight: 500;
     .tocify-item>a {
       padding-left: $nav-padding + $nav-indent;
@@ -190,7 +207,7 @@ html, body {
     }
 
     // for embossed look:
-    @include embossed-bg;
+    //@include embossed-bg;
     &>li:last-child {
       box-shadow: none; // otherwise it'll overflow out of the subheader
     }
@@ -199,7 +216,7 @@ html, body {
   .toc-footer {
     padding: 1em 0;
     margin-top: 1em;
-    border-top: 1px dashed $nav-footer-border-color;
+    border-top: 1px dashed $nav-text;
 
     li,a {
       color: $nav-text;
